--- a/Views/University/Courses.cshtml
+++ b/Views/University/Courses.cshtml
@@ -10,7 +10,7 @@
                     @p
                 </th>
                 <td>
-                    <a href="students/@p.ToLower()"> See Students of this course </a>
+                    <a href="courses/@p.ToLower()"> See Students of this course </a>
                 </td>
             </tr>
         }
